@@ -26,7 +26,7 @@
     {% endblock %}
 
     {% block view_title %}
-        <div class="hat-bar-container">
+        <div class="hat-bar-container ui-creme-widget ui-creme-hatmenubar widget-auto" widget="ui-creme-hatmenubar">
             <div class="hat-bar">
                 <div class="bar-icon">{% block logo %}{% widget_icon instance=object size='brick-hat-bar' %}{% endblock %}</div>
                 <div class="bar-title">
